# Questionable-Scene-Renderer

./: .gitignore  Cargo.toml  README.md
examples/: scene.rs
shaders/common/: alpha.wgsl  debug_grid.wgsl  deferred.wgsl  gbuffer.wgsl  no-texture-alpha.wgsl  no-texture-write-gbuffers.wgsl
src/: lib.rs
src/camera/: mod.rs
src/driver/: mod.rs
src/geometry/: mod.rs
src/gfx/: builtin.rs  material.rs  mod.rs  pass.rs  render_graph.rs  renderer.rs  resource.rs  shader.rs  texture.rs
src/scene/: mod.rs
