[package]
name = "qsr"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
cgmath = "0.18.0"
log = "0.4.29"
pollster = "0.4.0"
wgpu = "28.0.0"
tobj = "4.0.3"

[dependencies.winit]
version = "0.30.12"

[dependencies.image]
version = "0.24"
default-features = false
features = ["jpeg", "png"]

